[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
gl-client = {path = "./libs/gl-client-py", develop=true}
gltesting = {path = "./libs/gl-testing", develop=true}
cln-version-manager = {path = "./libs/cln-version-manager", develop=true}

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^7"
mypy = "^1.7.0"
grpcio-tools = "^1.59.2"
maturin = {version = ">=1.0,<1.3.2", extras = ["patchelf"]}
mypy-protobuf = "^3.5"
typed-ast = "^1.5.4"
grpc-stubs= "^1.53.0"

[tool.poetry.group.dev-cln-version-manager.dependencies]
types-requests = "^2.31"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
python = ">=3.8,<4"
mkdocs-material = "^9.5.0"
mkdocs-redirects = "^1.1.0"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.7"
ghp-import = "2.1.0"
pdoc = "^13.1.1"
cairosvg = "^2.7.0"
pillow = "^9.5.0"

# Language server protocol used by the ide
# Not to be confused with lightning service provider
[tool.poetry.group.lsp_ide.dependencies]
python-lsp-server = "^1.10.0"

[tool.uv.workspace]
members = ["libs/gl-testing", "libs/gl-testserver"]
