[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Christian Decker <cdecker@blockstream.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.4.1"
mkdocs-redirects = "^1.1.0"
pymdown-extensions = "^9.5"
ghp-import = "2.1.0"
pdoc = "^13.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
