[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Christian Decker <cdecker@blockstream.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
mkdocs-material = "^9.1.0"
mkdocs-redirects = "^1.1.0"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.7"
ghp-import = "2.1.0"
pdoc = "^13.1.1"
cairosvg = "^2.7.0"
pillow = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
