[package]
name = "gl-client"
version = "0.1.3"
edition = "2018"

[dependencies]
libhsmd-sys = { path = "libhsmd-sys-rs" }
anyhow = "*"
base64 = "*"
bytes = "*"
hex = "*"
http = "0.2"
http-body = "*"
log = "*"
pin-project = "*"
prost = "0.8"
ring = "*"
rustls-pemfile = "*"
tokio = { version = "*", features = ["full"] }
tonic = { version = "^0.5", features = ["tls", "transport"] }
tower = { version = "0.4" }
bitcoin = "0.27"

[build-dependencies]
tonic-build = "^0.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[workspace]
members = [
  "gl-client-py",
  "gl-client-js",
  "uniffi-gl-client",
  "libhsmd-sys-rs",
]
