[package]
name = "glcli"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.0.0"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
futures = "0.3"
gl-client = { path = "../gl-client" }
thiserror = "1.0.59"
tokio = "1.37.0"
vls-core.workspace = true
