[package]
name = "gl-cli"
version = "0.1.3"
edition = "2021"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
description = "A command-line interface for running a Greenlight signer and operating a Greenlight node"
homepage = "https://blockstream.github.io/greenlight/"
repository = "https://github.com/Blockstream/greenlight"
documentation = "https://blockstream.github.io/greenlight/"
keywords = ["lightning", "greenlight", "cli", "bitcoin", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "glcli"
test = true
doc = true

[dependencies]
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
futures = "0.3"
gl-client = { version = "0.3", path = "../gl-client" }
hex = "0.4"
thiserror = "2.0.11"
tokio = "1.43.0"
vls-core.workspace = true

[badges]
maintenance = { status = "actively-developed" }
