[package]
name = "gl-client-js"
version = "0.1.3"
license = "ISC"
edition = "2018"

[lib]
name = "gl_client_js"
crate-type = ["cdylib"]

[dependencies]
gl-client = { path = ".." }
tokio = "*"
log = "*"
env_logger = "*"
once_cell = "*"
tonic = "^0.5"
prost = "0.8"
anyhow = "*"
bitcoin = "0.27"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-4", "channel-api"]
