[package]
name = "gl-client-js"
version = "0.1.9"
license = "MIT"
edition = "2018"

[lib]
name = "gl_client_js"
crate-type = ["cdylib"]

[dependencies]
gl-client = { path = "../gl-client", features = ["permissive"] }
tokio = "1"
log = "*"
env_logger = { workspace = true }
once_cell = "*"
tonic = "^0.8"
prost = "0.11"
anyhow = { workspace = true }
neon = { version = "0.9", default-features = false, features = ["napi-4", "channel-api"] }
thiserror = "1.0.40"
