[package]
name = "gl-client-py"
version = "0.1.4"
edition = "2018"

[lib]
name = "glclient"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
bytes = "*"
env_logger = "*"
gl-client = { path = "../gl-client" }
hex = "*"
log = "*"
once_cell = "*"
prost = "0.11"
pyo3 = {version = "0.14.1", features = ["extension-module", "serde"]}
tokio = { version = "1", features = ["full"] }
tonic = { version = "^0.8", features = ["tls", "transport"] }
bitcoin = "^0"
