[package]
name = "gl-client-py"
version = "0.1.9"
edition = "2018"
license = "MIT"

[lib]
name = "glclient"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bytes = "1.4"
env_logger = { workspace = true }

gl-client = { path = "../gl-client", default-features = false, features = [ "export" ] }
hex = "*"
log = "*"
once_cell = "*"
prost = "0.11"
pyo3 = {version = "0.18", features = ["extension-module", "serde", "abi3-py37"]}
tokio = { version = "1", features = ["full"] }
tonic = { version = "^0.8", features = ["tls", "transport"] }
serde_json = "^1.0"

[features]
default = ["permissive"]
permissive = ["gl-client/permissive"]