[project]
name = "gl-client"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.56",
    "protobuf>=4",
    "pyln-grpc-proto>=0.1",
]
authors = [
  {name = "Christian Decker", email = "decker@blockstream.com"},
]
[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "grpcio>=1.67",
    "maturin>=1",
    "mypy>=1.14.1",
    "protobuf>=4",
    "pyln-grpc-proto>=0.1.2",
]

[tool.mypy]
exclude = [
    'glclient/greenlight_pb2.py',
    'glclient/scheduler_pb2.py',
    'glclient/greenlight_pb2_grpc.py',
    'glclient/scheduler_pb2_grpc.py',
]

[[tool.mypy.overrides]]
module = 'glclient'
