[package]
name = "gl-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gl-plugin"
path = "src/bin/plugin.rs"

[dependencies]
anyhow = "*"
async-stream = "*"
bytes = "1"
clightningrpc = "*"
cln-grpc = {git = "https://github.com/ElementsProject/lightning.git", branch = "master", features = ["server"] }
cln-rpc = {git = "https://github.com/ElementsProject/lightning.git", branch = "master"}
cln-plugin = "0.1.4"
env_logger = "^0.7.0"
futures = "0.3"
gl-client = { version = "0.1.4", path = "../gl-client" }
governor = { version = "0.5", default-features = false, features = ["std"] }
hex = "0.4"
lazy_static = "^1.4.0"
linemux = "0.2"
log = "0.4"
nix = "^0"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { version = "^0.8", features = ["tls", "transport"] }
tower = { version = "0.4" }
lightning-storage-server = { git="https://gitlab.com/cdecker/vls", tag="snapshot-20230620" }
sled = "*"
hyper = "0.14.23"
base64 = "0.21.2"

[build-dependencies]
tonic-build = "^0.8"
