[package]
name = "gl-plugin"
version = "0.3.0"
edition = "2021"
authors = ["Christian Decker", "The Greenlight Team"]
description = "Python bindings for the Greenlight client library."
repository = "https://github.com/Blockstream/greenlight"
license = "MIT"

[[bin]]
name = "gl-plugin"
path = "src/bin/plugin.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
base64 = "0.21.7"
bytes = { version = "1", features = ["serde"] }
clightningrpc = "0.2"
cln-grpc = { workspace = true, features = ["server"] }
cln-plugin = "^0.1"
cln-rpc = { workspace = true }
env_logger = "^0.7.1"
futures = "0.3"
gl-client = { version = "^0.3.0", path = "../gl-client" }
gl-util = { version = "0.1", path = "../gl-util" }
governor = { version = "0.5", default-features = false, features = ["std"] }
hex = "0.4"
hyper = "0.14.28"
lazy_static = "^1.4.0"
linemux = "0.2"
log = "0.4"
nix = "^0"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { version = "0.11", features = ["tls", "transport"] }
tower = { version = "0.4" }
vls-protocol = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
