[package]
name = "gl-sdk-cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper for gl-sdk"

[[bin]]
name = "glsdk"
path = "src/bin/glsdk.rs"

[dependencies]
glsdk = { path = "../gl-sdk", package = "gl-sdk" }
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
ctrlc = { version = "3.4", features = ["termination"] }
