[package]
name = "gl-sdk-node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs core dependencies
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"

# Use local gl-sdk (library name is 'glsdk')
glsdk = { path = "../gl-sdk", package = "gl-sdk" }

# Additional dependencies that gl-sdk uses
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
