[package]
name = "gl-sdk"
version = "0.2.0"
edition = "2024"
description = "High-level SDK for Greenlight with UniFFI language bindings"
license = "MIT"
repository = "https://github.com/Blockstream/greenlight"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "glsdk"

[dependencies]
anyhow = "1"
bip39 = "2.2.0"
gl-client = { version = "0.4.0", path = "../gl-client" }
hex = "0.4"
log = "0.4"
lightning-invoice = "0.33"
once_cell = "1.21.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["sync"] }
tonic.workspace = true
tracing = { version = "0.1.43", features = ["async-await", "log"] }
uniffi = { version = "0.29.4" }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }
