[project]
name = "gl-sdk"
version = "0.1.0"
description = "Python bindings for Greenlight SDK using UniFFI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "Christian Decker", email = "decker@blockstream.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glsdk"]

# Include the shared library as package data
[tool.hatch.build.targets.wheel.force-include]
"glsdk/libglsdk.so" = "glsdk/libglsdk.so"

[dependency-groups]
dev = [
    "gl-testing",
    "pdoc>=15.0.4",
    "pytest>=7.0",
    "pytest-watcher>=0.4.3",
    "rich>=10.0",
]

[tool.uv.sources]
gl-testing = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
