[package]
name = "gl-signerproxy"
version = "0.3.1"
edition = "2021"
authors = [
        "Christian Decker",
        "The Greenlight Team"
]
description = "Python bindings for the Greenlight client library."
repository = "https://github.com/Blockstream/greenlight"
license = "MIT"

[[bin]]
name = "gl-signerproxy"
path = "src/bin/signerproxy.rs"

[build-dependencies]
tonic-build = "0.8"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
# Minimal tokio - only for gRPC client runtime
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tonic = { version = "0.8", features = ["tls", "transport"] }
prost = "0.11"
log = "*"
tower = "0.4"
which = "4.4.2"
libc = "0.2"
byteorder = "1.5.0"
