[project]
name = "gltestserver"
version = "0.1.0"
description = "A standalone test server implementing the public Greenlight interfaces"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "gl-testing",
    "rich>=13.9.3",
]

[project.scripts]
gltestserver = 'gltestserver.__main__:cli'

[tool.uv.sources]
gl-testing = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "gltestserver",
]
