[package]
name = "gl-util"
version = "0.1.0"
edition = "2024"
authors = ["The Greenlight Team"]
description = "Utility module for the Greenlight client library"
homepage = "https://blockstream.github.io/greenlight/"
repository = "https://github.com/Blockstream/greenlight"
license = "MIT"

[dependencies]
bytes = "1.10"
cln-rpc = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
