[tool.poetry]
name = "glapi"
version = "0.0.1"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]

packages = [
    { include = "glapi/**/*.py" },
]

include = [
        "extbuild.py",
        ]

build = "extbuild.py"

[tool.poetry.dependencies]
python = "^3.5"
grpcio = "~1.34.0"
protobuf = "~3.15.8"
click = "~7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "pip"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glcli = "glapi.cli:cli"
