[tool.poetry]
name = "glapi"
version = "0.0.1"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]

packages = [
    { include = "glapi/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
grpcio = "^1.41.1"
protobuf = "^3.19.1"
click = "~7.1.2"
glclient = {path = "../rust/gl-client-py"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "pip"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glcli = "glapi.cli:cli"
