[tool.poetry]
name = "glapi"
version = "0.0.2"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]

packages = [
    { include = "glapi/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
grpcio = "^1.41.1"
protobuf = "^3.19.1"
click = "~7.1.2"
# Relative paths are not supported by `pip`, once we publish to PyPI
# we can actually make this just a normal dependency

#glclient = { path = "../rust/gl-client-py" }


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "pip"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glcli = "glapi.cli:cli"
