[package]
name = "gl-client"
version = "0.1.0"
edition = "2018"

[dependencies]
libhsmd-sys = { git = "https://github.com/cdecker/lightning", branch = "libhsmd-rust" }
anyhow = "*"
hex = "*"
lazy_static = "*"
log = "*"
prost = "0.8"
tokio = { version = "*", features = ["full"] }
tonic = { version = "^0.5", features = ["tls", "transport"] }
env_logger = "*"

[build-dependencies]
tonic-build = "^0.5"

[workspace]
members = [
  "gl-client-py",
  "gl-client-js",
]
